--- a/src/components/Cat/Cat.css
+++ b/src/components/Cat/Cat.css
@@ -1,25 +1,25 @@
+
 .cat {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 16.66rem;
-    margin: 0 .5rem 2.3rem .5rem;
+    margin: 0 .5rem .3rem .5rem;
 }
 
 .cat .image-container {
     height: 16.66rem;
-    margin-bottom: 1rem;
-    border-radius:20%;
+    margin-bottom: 0.4rem;
+    border-radius:10%;
 }
 
-.cat h2 {
-    margin-bottom: .5rem;
+.cat>h2 {
     font-size: 1.2rem;
     font-weight: 600;
     color: #11420d;
     background-color: #FBF8BE;
     padding: 15px;
-    border-radius:10px;
+    border-radius:10rem;
 
     /*Royal Blue , Pale Yellow #FBF8BE*/
 }
@@ -27,12 +27,13 @@
 .cat-information {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 .cat-information p {
     font-size: .88rem;
     font-weight: 300;
-    line-height: 1.5rem;
+    line-height: 1.2rem;
 }
 
 .cat-origin {
@@ -60,4 +61,8 @@
 }
 .bold{
     font-weight: bold;
+}
+img {
+    height:300rem;
+    width:300rem;
 }
