--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -41,6 +41,7 @@
     display: flex;
     justify-content: center;
     margin-bottom: 2.88rem;
+
 }
 
 .SearchBar-fields input {
@@ -49,8 +50,9 @@
     margin-right: 2.22rem;
     border: 1px solid #fff;
     border-radius: 4px;
-    font-size: .77rem;
+    font-size: .88rem;
     font-weight: 500;
+    text-align: center;
 }
 
 .SearchBar-fields input:last-child {
